adds all the models which represents dates in database design which include patients,appointment,prescription, doctors

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://alexkimathi700:Damu1234@damuproject.m9zxfif.mongodb.net/
+MONGO_URI=mongodb+srv://alexkimathi700:Damu1234@damuproject.m9zxfif.mongodb.net/?retryWrites=true&w=majority
 
 # mongodb+srv://alexkimathi700:alex1234@workouts.zdfiybm.mongodb.net/?retryWrites=true&w=majority
 
